src/FinancialForce Accounting/objects/codaPurchaseInvoiceLineItem__c.object
<CustomObject>
    <description>The line items on the payable invoice, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>CalculateTaxValuefromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveUnitPricefromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Destination Company)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationNetValue__c</fullName>
        <formula>DestinationUnitPrice__c * DestinationQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DestinationQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought by destination company.</description>
        <label>Destination Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DestinationUnitPrice__c</fullName>
        <description>The unit price for this product for destination company.</description>
        <label>Destination Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EditTaxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Tax Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsInput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PayableInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsReverseChargeTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <formula>UnitPrice__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputTaxRate__c</fullName>
        <label>Output Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputTaxValue__c</fullName>
        <label>Output Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OutPut Tax Code for Reverse Charge Tax Code.</description>
        <label>Output Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItemsOutput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product name.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseInvoice__c</fullName>
        <description>The auto-generated payable invoice number.</description>
        <label>Payable Invoice Number</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetTaxCodetoDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate1__c</fullName>
        <label>Input Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRateTotal__c</fullName>
        <formula>TaxRate1__c + TaxRate2__c - OutputTaxRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <label>Input Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValueTotal__c</fullName>
        <formula>TaxValue1__c + TaxValue2__c - OutputTaxValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>The unit price for this product.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Payable Invoice Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payable Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>